--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,14 @@
 <resources>
     <string name="app_name">Profiler</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_organization">Organization</string>
+    <string name="title_contacts">Contacts</string>
 
     <string name="name_placeholder">Name</string>
     <string name="surname_placeholder">Surname</string>
     <string name="profile_picture_description">Profile Picture</string>
     <string name="bio_placeholder">Bio</string>
+    <string name="number_placeholder">Number</string>
 
     <string name="user_name"></string>
     <string name="user_surname"></string>
@@ -21,4 +22,15 @@
     <string name="telegram_name">Telegram</string>
     <string name="profile_picture">Profile Picture</string>
 
+    <string name="title_alert_no_permission">No permission granted</string>
+    <string name="message_alert_no_permission">The app need to access your contacts to ensure a fully experience</string>
+
+    <string name="title_alert_permission_error">Error</string>
+
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="ok">Ok</string>
+    <string name="allow">Allow</string>
+    <string name="deny">Deny</string>
+    <string name="cancel">Cancel</string>
 </resources>
