--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="add">Add</string>
     <string name="allow">Allow</string>
     <string name="deny">Deny</string>
+    <string name="delete">Delete</string>
     <string name="cancel">Cancel</string>
     <string name="register_user_title">Register your data</string>
     <string name="register_user_message">Please, insert your contact information</string>
@@ -62,7 +63,14 @@
     <string name="title_activity_maps">Map</string>
     <string name="submit_button">Submit</string>
 
+    <string name="set_time_intervals">Set time intervals</string>
+    <string name="time_intervals_title">Time Intervals</string>
+    <string name="time_interval_start">Interval starts at</string>
+    <string name="time_interval_end">Interval ends at</string>
+
     <string name="favourite_contacts_text">Favourite contacts</string>
     <string name="contacts_text">Contacts list</string>
+
+    <string name="notification_permissions_needed">Notification permissions are needed to enable/disable do not disturb mode</string>
 
 </resources>
