--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="add">Add</string>
     <string name="allow">Allow</string>
     <string name="deny">Deny</string>
+    <string name="continue_text">Continue</string>
     <string name="delete">Delete</string>
     <string name="cancel">Cancel</string>
     <string name="register_user_title">Register your data</string>
@@ -75,5 +76,9 @@
 
     <string name="notification_permissions_needed">Notification permissions are needed to enable/disable do not disturb mode</string>
     <string name="location_permissions_error">You need location permissions to use this feature</string>
+    <string name="number_bad_formatted">The number has an invalid format</string>
+    <string name="nfc_contact_received">Contact received correctly</string>
+    <string name="nfc_contact_sent">Contact sent correctly</string>
+
 
 </resources>
